# awry

./: Cargo.toml  README.md
preset/: meilisearch.toml  minisearch.toml
src/: configuration.rs  main.rs
