[package]
name = "awry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
reqwest = { version = "0.11.11", default-features = false, features = ["rustls-tls", "json", "blocking"] }
serde = { version = "1.0.139", features = ["serde_derive", "derive"] }
serde_json = "1.0.82"
tokio = { version = "1.20.0", features = ["rt-multi-thread", "macros"] }
ureq = "2.5.0"
